# GratitudeNotesAPI

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: cargo-test.yml  rust-clippy.yml
docker/production/: .dockerignore  Dockerfile
src/: main.rs
src/tests/: unit_tests.rs
